--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,28 @@
 
 server.port = 8082
 
-spring.datasource.url=jdbc:h2:mem:CusttDb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-springspring.datasource.password=
+# OracleDB connection settings
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.driver-class=oracle.jdbc.driver.OracleDriver
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.username=SYS AS SYSDBA
+spring.datasource.password=ajay
 
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
-#spring.jpa.show-sql=true
+# HikariCP settings
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.poolName=HikariPoolBooks
+
+# JPA settings
+
+
+JPA is just a specification that facilitates object-relational mapping to manage relational data in Java applications. It provides a platform to work directly with objects instead of using SQL statements.
+
